# covid-pl-qr-tool

./: Cargo.toml  LICENSE  README.md
covid-qr-decode/: Cargo.toml
covid-qr-decode/keys/: publiczny_klucz_podpisu.pub  test_public.pem
covid-qr-decode/src/: decrypt.rs  error.rs  lib.rs  pdf.rs  qr.rs  vaccination_info.rs
covid-qr-decode/testdata/: 1.base64  1.cipher  1.payload  1.plain  2.base64  2.cipher  2.payload  2.plain  empty.cipher  invalid_utf8.cipher  malformed.cipher
covid-qr-info/: Cargo.toml
covid-qr-info/src/: cli.rs  main.rs
